# commands-db-cli

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml
src/nagare/admin/: commands_db_cli.py
